feat: Cart, cart system, updates

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set CI=false && react-app-rewired start",
-    "build": "set CI=false && react-app-rewired build",
-    "test": "react-app-rewired test",
+    "start": "set CI=false && react-scripts start",
+    "build": "set CI=false && react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
